z-index fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1780,7 +1780,7 @@ dialog {
 	width: min(100%, 636px);
 	max-height: calc(100% - 4rem);
 	max-width: calc(100% - 2rem);
-	z-index: 1000;
+	z-index: 200;
 }
 
 dialog[data-intensity="bold"] {
@@ -1814,7 +1814,7 @@ dialog::backdrop {
 	background-color: var(--colour-fill-neutral-bold);
 	opacity: 0.8;
 	pointer-events: none;
-	z-index: 999;
+	z-index: 199;
 }
 
 dialog button.close-dialog:has(.icon:only-child) {
